--- a/lide-pma/lide-pma/app/config/parameters.yml
+++ b/lide-pma/lide-pma/app/config/parameters.yml
@@ -1,7 +1,7 @@
 # This file is auto-generated during the composer install
 parameters:
     database_host: 127.0.0.1
-    database_port: null
+    database_port: 3306
     database_name: lidepma_db
     database_user: lidepma
     database_password: lidepma
