--- a/lide-pma/lide-pma/composer.json
+++ b/lide-pma/lide-pma/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ualide/lide-pma",
+    "name": "lideprojectmanager",
     "license": "GPL",
     "type": "project",
     "autoload": {
@@ -35,10 +35,10 @@
         "nelmio/cors-bundle": "^1.5",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^5.0.0",
-        "symfony/monolog-bundle": "3.1.*",
+        "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.6.4",
-        "symfony/symfony": "^3.4.35",
+        "symfony/symfony": "3.4.*",
         "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
