--- a/lide-web/lide-web/package.json
+++ b/lide-web/lide-web/package.json
@@ -36,6 +36,7 @@
     "brace": "^0.11.1",
     "css-loader": "^1.0.0",
     "cssloader": "^1.1.1",
+    "cypress": "^3.1.4",
     "eslint": "^5.6.1",
     "eslint-config-prettier": "^3.1.0",
     "eslint-loader": "^2.1.1",
