--- a/lide-pma/Dockerfile
+++ b/lide-pma/Dockerfile
@@ -1,3 +1,6 @@
+#Si vous n'êtes pas sur le réseau EDUROAM : Veuillez commenter chaque ligne  RUN cat /resolv.conf > /etc/resolv.conf &&\
+#Et ajouter RUN sur la suivante
+
 FROM ubuntu:18.04
 
 ARG DEBIAN_FRONTEND=noninteractive
@@ -6,32 +9,32 @@ ARG DEBIAN_FRONTEND=noninteractive
 COPY resolv.conf / 
 
 ## Téléchargement Curl & wget & gnugpg
-#RUN cat /resolv.conf > /etc/resolv.conf &&\ \n RUN
-RUN	apt update &&\
+RUN cat /resolv.conf > /etc/resolv.conf &&\
+	apt update &&\
 	apt install curl wget gnupg -yq &&\
 	apt clean
 
 ## Ajout du paquet Docker
-#RUN cat /resolv.conf > /etc/resolv.conf &&\ \n RUN
-RUN	curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add - &&\
+RUN cat /resolv.conf > /etc/resolv.conf &&\
+	curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add - &&\
 	echo "deb [arch=amd64] https://download.docker.com/linux/ubuntu bionic stable" >> /etc/apt/sources.list
 
 ## Téléchargement des dépendances
-#RUN cat /resolv.conf > /etc/resolv.conf &&\ \n RUN
-RUN	apt update &&\
+RUN cat /resolv.conf > /etc/resolv.conf &&\
+	apt update &&\
 	apt install git php7.2 php7.2-xml php7.2-mysql php-ssh2 php-curl php-mbstring mariadb-server unzip apt-transport-https ca-certificates software-properties-common docker-ce -yq  &&\
 	apt clean
 
 ## Téléchargement de Composer
-#RUN cat /resolv.conf > /etc/resolv.conf &&\ \n RUN
-RUN	php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" &&\
+RUN cat /resolv.conf > /etc/resolv.conf &&\
+	php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" &&\
 	php -r "if (hash_file('sha384', 'composer-setup.php') === 'a5c698ffe4b8e849a443b120cd5ba38043260d5c4023dbf93e1558871f1f07f58274fc6f4c93bcfd858c6bd0775cd8d1') { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;" &&\
 	php composer-setup.php &&\
 	php -r "unlink('composer-setup.php');"
 
 ## Téléchargement de Symfony
-#RUN cat /resolv.conf > /etc/resolv.conf &&\ \n RUN
-RUN	wget https://get.symfony.com/cli/installer -O - | bash &&\
+RUN cat /resolv.conf > /etc/resolv.conf &&\
+	wget https://get.symfony.com/cli/installer -O - | bash &&\
     mv /root/.symfony/bin/symfony /usr/local/bin/symfony
 
 
@@ -42,8 +45,8 @@ WORKDIR /lide-pma
 
 
 ## Installation des dépendances projet
-##RUN cat /resolv.conf > /etc/resolv.conf &&\ \n RUN \n RUN
-RUN    php /composer.phar install -n --no-progress --no-suggest &&\
+RUN cat /resolv.conf > /etc/resolv.conf &&\
+	php /composer.phar install -n --no-progress --no-suggest &&\
 	php bin/console cache:clear --no-warmup
 
 
